--- a/index.html
+++ b/index.html
@@ -18,20 +18,27 @@
           <!---<img src="./images/logo1.png" class="logo" />-->
           <h1>Eric</h1>
 
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Hobbies</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+          <ul id="sidemenu">
+            <li><a href="#container">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#hobbies">Hobbies</a></li>
+            <li><a href="#portfolio">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
+
+          <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+
         </nav>
-        <div class="header-text">
+        <div class="header-text" id="home">
           <p>Aspiring Web Developer</p>
           <h1>
             Hi!, I'm <span>Eric Soriano</span>. <br />It's nice to meet you!
           </h1>
         </div>
+      </div>
+      <div class="get-started">
+          <button type="submit" class="btn btn3">Get Started</button>
       </div>
     </header>
 
@@ -46,10 +53,8 @@
           <div class="about-col-2">
             <h1 class="sub-title">About me</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-              magni enim voluptate at quaerat reiciendis dolorem esse modi
-              sapiente et corrupti, fugit neque delectus placeat porro
-              perspiciatis, officia amet quos?
+              Hello, I'm an aspiring Web Developer residing in Cavite.  Currently studying Bachelor of Science in Information Technology in Cavite State University Imus
+              23 years old. With surface level knowledge in HTML, CSS and PHP. My goal this year is to learn JavaScript and hopefully use it for future purposes.
             </p>
 
             <div class="tab-titles">
@@ -187,16 +192,18 @@
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-google"></i></a>
               </div>
+              <a href="./images/Eric Yeoj H. Soriano Resume.pdf" download class="btn btn2">Download my CV</a>
 
             </div>
              <div class="contact-right">
-              <form>
+              <form name="submit-to-google-sheet">
                 <input type="text" name="Name" placeholder="Enter your name" required>
                 <input type="email" name="Email" placeholder="Enter your email" required>
                 <textarea name="message" rows="6" placeholder="Enter your message"></textarea>
-                <button type="submit">Submit</button>
+                <button type="submit" class="btn btn2">Submit</button>
 
               </form>
+              <span id="msg">Hello</span>
               
             </div>
           </div>
@@ -219,5 +226,39 @@
         document.getElementById(tabname).classList.add("active-tab");
       }
     </script>
+
+    <script>
+        var sidemenu = document.getElementById("sidemenu");
+
+        function openmenu(){
+          sidemenu.style.right = "0"
+
+        }
+          function closemenu(){
+          sidemenu.style.right = "-200px"
+
+        }
+
+    </script>
+
+<script>
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbwhElB6ia5EjbO7w6n7FXhO2qpnA7bxgxIgnW40Wa3klpXNztE0Em3x0Yw-t2Gfqh_yGw/exec'
+  const form = document.forms['submit-to-google-sheet']
+  const msg = document.getElementById("msg")
+
+
+  form.addEventListener('submit', e => {
+    e.preventDefault()
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      .then(response => {
+          msg.innerText = "Detail submitted successfully"
+          setTimeout(function(){
+            msg.innerHTML = ""
+          },5000)
+          form.reset()
+      })
+      .catch(error => console.error('Error!', error.message))
+  })
+</script>
   </body>
 </html>
