--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <header>
+      <section class="hidden">
       <div class="container">
         <nav>
           <!---<img src="./images/logo1.png" class="logo" />-->
@@ -36,13 +37,16 @@
             Hi!, I'm <span>Eric Soriano</span>. <br />It's nice to meet you!
           </h1>
         </div>
-      </div>
-      <div class="get-started">
+       <!---- <div class="get-started"> ---->
           <button type="submit" class="btn btn3">Get Started</button>
+       <!---</div>------> 
       </div>
+      
+      </section>
     </header>
 
     <!------------ABOUT COLUMN STARTS HERE-->
+    <section class="hidden">
     <div id="about">
       <div class="container">
         <div class="row">
@@ -103,7 +107,9 @@
         </div>
       </div>
     </div>
+    </section>
     <!--------------HOBBIES-------------------------->
+     <section class="hidden">
     <div id="hobbies">
       <div class="container">
         <h1 class="sub-title">My Hobbies</h1>
@@ -141,8 +147,10 @@
         </div>
       </div>
     </div>
+    </section>
 
-    <d1iv id="portfolio">
+     <section class="hidden">
+    <div id="portfolio">
       <div class="container">
         <h1 class="sub-title">My Projects</h1>
         <div class="project-list">
@@ -177,8 +185,10 @@
         <a href="" class="btn">Explore</a>
       </div>
     </div>
+    </section>
     <!-----------------------CONTACT---------------------------->
 
+    <section class="hidden">
     <div id="contact">
         <div class="container">
           <div class="row">
@@ -210,6 +220,24 @@
         </div>
 
     </div>
+    </section>
+    <script>
+      const observer = new IntersectionObserver((entries) =>{
+        entries.forEach((entry) =>{
+          console.log(entry)
+          if (entry.isIntersecting){
+            entry.target.classList.add('show');
+          }else{
+            entry.target.classList.remove('show');
+          }
+        });
+      });
+      const hiddenElements = document.querySelectorAll('.hidden');
+      hiddenElements.forEach((el) => observer.observe(el));
+
+
+
+    </script>
     <script>
       // variables
       var tablinks = document.getElementsByClassName("tab-links"); //for skills, experience and education
